--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="C:\Users\mohan\OneDrive\Documents\FSD\images\11zon_cropped (2).png" alt ="Tejashwini's pic" width="100" height="100"/></td>
+        <td><img src="11zon_cropped (2).png" alt ="Tejashwini's pic" width="100" height="100"/></td>
         <td>  <h3>Tejashwini.Itigi </h3>
           <p> I am purusing my <strong> MCA </strong> in <em> Nagarjuna College of Management and studies</em></p>
       <p> I'm intrested in Handcraft making and I ❤️ Teaching</p></td>
